# bukacv-backend

./: .gitignore  README.md  app.py  pyproject.toml
endpoints/: __init__.py  routes.py
services/: document_service.py
testing/: test.py
